# better_i18n_django

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml
app1/locale/de/LC_MESSAGES/: django.po  po_project_test_1.po
app1/locale/es_MX/LC_MESSAGES/: django.po
app1/management/: _helpers.py
app1/management/commands/: cleanmessages.py  extractmessages.py  makemessages.py  mergemessages.py  tagmessages.py
app1/templates/: index.html
i18n_and_pofiles/: asgi.py  settings.py  urls.py  wsgi.py
i18n_and_pofiles/locale/de/LC_MESSAGES/: django.po
i18n_and_pofiles/locale/es_MX/LC_MESSAGES/: django.po
