[tool.poetry]
name = "i18n_and_pofiles"
version = "0.1.0"
description = "Testing i18 project"
authors = ["Felix Miño <fmino@stackbuilders.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
polib = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
